some locationmanager code.
worked for short tests just ok, but on a longer trip I just had a
horrible memory leak on both phones again. will try google play api
instead.